--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "editor.fontFamily": "''JetBrains Mono,'Droid Sans Mono', 'monospace', monospace"
+    "editor.fontFamily": "'JetBrains Mono','Droid Sans Mono', 'monospace'"
 }
